fix: update login docs
