# COMPONENTS/api/docs/swagger.yaml
@@ -103,6 +103,10 @@ paths:
           description: Invalid credentials
           schema:
             $ref: '#/definitions/echo.HTTPError'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
         "500":
           description: Internal server error
           schema:
